tests/compile_fail/bad_dim_type.rs
use fizix::alias_units;

alias_units! {
    pub Foo => ("non-typenum dimension", String),
}

fn main() {
    let _ = Foo::new(1.0f64);
}
